--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,4 +1,4 @@
 .controllerd {
     bottom: 20px;
-    right: 30px;
+    left: 30px;
 }
