--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,5 +1,5 @@
 .controllerd {
     bottom: 3%;
-    right: 6%;
+    left: 6%;
     gap: 10px; /* 특이하게 모바일만 간격이 사라지는 문제 처리 */
 }
